--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon backend/app.js",
+    "dev": "cross-env NODE_ENV=development nodemon app.js",
     "start": "node app.js"
   },
   "keywords": [],
