updated global jsons and frontend json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "npm install --prefix backend && npm install --prefix chatFrontend && npm run build --prefix chatFrontend",
+    "build": "npm install --prefix backend && npm install --production=false --prefix chatFrontend && npm run build --prefix chatFrontend",
     "start": "npm start --prefix backend"
   },
   "keywords": [],
