--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
